# garbled-concept

./: .gitignore  LICENSE  README.md  pyproject.toml
src/garbled_concept/: benchmark.py  demonstrate.py  ec_mac.py  garbled_circuit.py  parameters.py
src/garbled_concept/models/: __init__.py  argo_wire.py  benchmark_result.py  binary_garbled_gate.py  binary_label.py  binary_wire.py  ec_mac.py  ec_point.py  gate_type.py  m_a_c.py  point.py
